blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-bus
  template:
    metadata:
      labels:
        app: client-bus
    spec:
      containers:
        - name: client
          image: loqual/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv 
spec:
  selector:
    app: client-bus
  ports:
    - name: client-bus
      protocol: TCP
      port: 3000
      targetPort: 3000
