blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-bus
  template:
    metadata:
      labels:
        app: comments-bus
    spec:
      containers:
        - name: comments
          image: loqual/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv 
spec:
  selector:
    app: comments-bus
  ports:
    - name: comments-bus
      protocol: TCP
      port: 4001
      targetPort: 4001
