blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv 
spec: 
  ingressClassName: nginx
  rules:
    - host: posts.com 
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-clusterip-srv
                port:
                  number: 4000
